<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yukari</string>
    <string name="app_long_name">Yukari for Android</string>

    <string name="twitter_consumer_key">rH3YrUr7YlLBPrx2Mk5mng</string>
    <string name="twitter_consumer_secret">6vG5nUHEO4EyMlGFXZ7G2GJx1yUsRxFTHQTTMvRI</string>

    <string name="mastodon_website_url">http://yukari.shibafu528.info/</string>

    <string name="activity_animation_duration">300</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">キャンセル</string>
    <string name="button_next">次へ</string>
    <string name="button_send">送信</string>

    <string name="title_activity_oauth">アカウントを追加</string>
    <string name="title_activity_tweet">投稿</string>
    <string name="title_activity_status">投稿詳細</string>
    <string name="title_activity_assetextract">起動準備中…</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_morse_input">モールス入力</string>
    <string name="title_activity_snpicker">ScreenName Picker</string>
    <string name="title_activity_accountchooser">アカウントを選択</string>
    <string name="title_activity_accountmanage">アカウント管理</string>
    <string name="title_activity_config">設定</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_picture_chooser">画像を追加</string>

    <string name="key_viewholder">viewholder</string>
    <string name="title_activity_profile_edit">プロフィール編集</string>
    <string name="title_activity_column_edit">タブの編集</string>
    <string name="title_activity_mute">ミュート設定</string>
    <string name="title_activity_auto_mute">オートミュート設定</string>
    <string name="title_activity_user_search">ユーザー検索</string>
    <string name="title_activity_font_selector">フォント設定</string>
    <string name="title_activity_maintenance">Maintenance Mode</string>
    <string name="title_activity_twpf">ツイフィール ビューア</string>
    <string name="title_activity_template_edit">定型文設定</string>
    <string name="title_activity_query_editor">Query Editor</string>
    <string name="title_activity_pluggaloid_output">標準出力ビューア</string>
    <string name="title_activity_backup">設定のインポート・エクスポート</string>
    <string name="title_activity_backup_import">設定のインポート</string>
    <string name="title_activity_backup_export">設定のエクスポート</string>
    <string name="title_activity_channel_manage">ストリーミング接続管理</string>
    <string name="title_activity_mastodon_report">通報</string>
    <string name="title_activity_mastodon_follow">フォロー状態</string>

    <string name="drive_error_connect">Driveとの接続に失敗しました</string>
    <string name="drive_importing">インポート中…</string>
    <string name="drive_exporting">エクスポート中…</string>
    <string name="drive_failed_import">Import failed.</string>
    <string name="drive_failed_export">Export failed.</string>
    <string name="drive_complete_import">Import Complete!</string>
    <string name="drive_complete_export">Export Complete!</string>

    <string name="mute_query">キーワード</string>
    <string name="mute_target">検索の対象</string>
    <string name="mute_match">一致条件</string>
    <string name="mute_erase">ミュートの対象</string>
    <string name="mute_expiration">有効期限</string>

    <string name="list_members_count">%1$d 人のメンバー</string>
    <string name="list_subscribers_count">, %1$d 人がリストを保存</string>

    <string name="error_storage_not_found">[Yukari 起動エラー] ストレージエラー\nアプリの動作にはストレージが必須です\nSDカードが挿入されているか確認してください</string>
    <string name="error_broken_font">[Yukari データチェック]\nフォントファイルが壊れています\n再展開を行います</string>

    <string name="notification_channel_id_general">General</string>
    <string name="notification_channel_id_error">Error</string>
    <string name="notification_channel_id_core_service">CoreService</string>
    <string name="notification_channel_id_async_action">AsyncAction</string>

    <string name="mastodon_status_visibility_prefer_server_preference">Webアプリの設定を使用</string>
    <string name="mastodon_status_visibility_public">公開</string>
    <string name="mastodon_status_visibility_unlisted">未収載</string>
    <string name="mastodon_status_visibility_private">フォロワー限定</string>
    <string name="mastodon_status_visibility_direct">ダイレクト</string>

    <string name="mastodon_report_category_spam">スパム投稿である</string>
    <string name="mastodon_report_category_violation">サーバーのルールに違反している</string>
    <string name="mastodon_report_category_other">その他の理由</string>

    <string name="mastodon_report_activity_failed_to_load_rules">サーバールールの確認中にエラーが発生しました</string>
    <string name="mastodon_report_category_fragment_title">通報の理由を教えてください</string>
    <string name="mastodon_report_category_fragment_report_from">以下のアカウントから通報します</string>
    <string name="mastodon_report_category_fragment_loading_message">サーバーのルールを確認しています…</string>
    <string name="mastodon_report_select_rule_fragment_title">どのルールに違反していますか？</string>
    <string name="mastodon_report_comment_fragment_title">他に伝えたい情報はありますか？</string>
    <string name="mastodon_report_comment_fragment_comment_hint">追加コメント</string>
    <string name="mastodon_report_comment_fragment_forward">このユーザーは別のサーバーに所属しています。通報内容を匿名で転送しますか？</string>
    <string name="mastodon_report_comment_fragment_forward_checkbox">転送する</string>
    <string name="mastodon_report_comment_fragment_success_report">通報しました</string>
    <string name="mastodon_report_comment_fragment_failure_report">通報中にエラーが発生しました</string>

    <string name="oauth_success_fragment_title">認証が完了しました</string>
    <string name="oauth_success_fragment_channel_manage_notice">ストリーミング接続管理画面から、タイムライン自動取得の設定ができます。\n(設定画面からいつでも開けます)</string>
    <string name="oauth_success_fragment_open_channel_manage">ストリーミング接続管理を開く</string>
    <string name="oauth_success_fragment_finish">OK</string>
    <string name="oauth_success_fragment_finish_first">タイムラインを開く</string>

    <string name="notification_preference_activity_notify_toast">ポップアップ通知</string>

    <string name="follow_control_loading">読み込み中…</string>
    <string name="follow_control_load_failed">読み込みエラー</string>
    <string name="follow_control_follow">フォローする</string>
    <string name="follow_control_unfollow">フォロー解除</string>
    <string name="follow_control_block">ブロックする</string>
    <string name="follow_control_unblock">ブロック解除</string>
    <string name="follow_control_remove_from_followers">フォロワーから削除</string>
    <string name="follow_control_requested">フォローリクエスト中</string>
    <string name="follow_control_follow_processing">フォロー中…</string>
    <string name="follow_control_unfollow_processing">フォロー解除中…</string>
    <string name="follow_control_block_processing">ブロック中…</string>
    <string name="follow_control_unblock_processing">ブロック解除中…</string>
    <string name="follow_control_remove_from_followers_processing">削除中…</string>
    <string name="follow_control_follow_succeed">フォローしました (\@%1$s)</string>
    <string name="follow_control_follow_failed">フォローに失敗しました (\@%1$s)</string>
    <string name="follow_control_unfollow_succeed">フォローを解除しました (\@%1$s)</string>
    <string name="follow_control_unfollow_failed">フォロー解除に失敗しました (\@%1$s)</string>
    <string name="follow_control_block_succeed">ブロックしました (\@%1$s)</string>
    <string name="follow_control_block_failed">ブロックに失敗しました (\@%1$s)</string>
    <string name="follow_control_unblock_succeed">ブロックを解除しました (\@%1$s)</string>
    <string name="follow_control_unblock_failed">ブロック解除に失敗しました (\@%1$s)</string>
    <string name="follow_control_remove_from_followers_succeed">フォロワーから削除しました (\@%1$s)</string>
    <string name="follow_control_remove_from_followers_failed">フォロワーからの削除に失敗しました (\@%1$s)</string>
    <string name="follow_control_unfollow_confirm">\@%1$s から \@%2$s へのフォローを解除してもよろしいですか？</string>
    <string name="follow_control_block_confirm">\@%1$s から \@%2$s をブロックしてもよろしいですか？</string>
    <string name="follow_control_unblock_confirm">\@%1$s から \@%2$s へのブロックを解除してもよろしいですか？</string>
    <string name="follow_control_remove_from_followers_confirm">\@%1$s を \@%2$s のフォロワーから削除してもよろしいですか？</string>
</resources>
